[package]
name = "rockettest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_cors = "0.6.0"
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-rustls"] }
md5 = "0.7.0"
cookie = "0.18.0"
[default.databases]
mysql_db = { url = "mysql://root:bobo2004@localhost:3306/userdata" }


