[package]
name = "rockettest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json", "secrets"] }
reqwest = { version = "0.12.2", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
rocket_cors = "0.6.0"
serde_json = "1.0"
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
bcrypt = "0.15.0"
uuid = { version = "1.7.0", features = ["v4"] }
lettre = "0.11.4"
rand = "0.8.4"
chrono = "0.4"
futures = "0.3"
base64 = "0.22.0"
quickxml_to_serde = { version = "0.6", features = ["json_types"] }
quick-xml = "0.31.0"
dotenv = "0.15.0"
[default.databases]
mysql_db = { url = "mysql://root:bobo2004@localhost:3306/userdata" }


